Fix alignment of text in opening hours

--- a/src/components/opening_hours/opening_hours.scss
+++ b/src/components/opening_hours/opening_hours.scss
@@ -11,6 +11,7 @@
 
   table {
     @extend %osg-padding-bottom-5;
+    text-align: left;
     width: 100%;
 
     tr {
